typescript/checker/tests/conformance/async/es6/await_unaryExpression_es6_2.ts.stderr
error: TS2703
 --> $DIR/tests/conformance/async/es6/await_unaryExpression_es6_2.ts:4:12
  |
4 |     delete await 42;
  |            ^^^^^^^^

error: TS2703
 --> $DIR/tests/conformance/async/es6/await_unaryExpression_es6_2.ts:8:12
  |
8 |     delete await 42;
  |            ^^^^^^^^

